--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "endroid/qr-code": "^3.5",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
+        "laravel/horizon": "3.7.2",
         "laravel/tinker": "^1.0",
         "overtrue/laravel-lang": "^3.0",
         "predis/predis": "^1.1",
